--- a/index.html
+++ b/index.html
@@ -17,7 +17,22 @@
         </article>
         <article>
             <h2>1. Más formas de jugar que nunca</h2>
-            <p>FIFA 21 cuenta con nuevas funciones que te permitirán experimentar el juego del mundo de formas completamente nuevas. Únete a tus amigos y enfréntate a todo el mundo en <a href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features">FUT</a> y <a href="https://www.ea.com/es-es/games/fifa/fifa-21/volta/features">VOLTA FOOTBALL</a>. Planta cara a los más grandes del fútbol y a muchos más con los <a href="https://www.ea.com/es-es/games/fifa/fifa-21/volta/groundbreakers">Rompemoldes</a> de VOLTA. O pon a prueba tus habilidades con un sinfín de nuevos juegos de habilidad. ¡Hay un montón de cosas interesantes!</p>
+            <p>FIFA 21 cuenta con nuevas funciones que te permitirán experimentar el juego del mundo de formas completamente nuevas. Únete a tus amigos y enfréntate a todo el mundo en
+                <a href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features">FUT</a>
+                 y 
+                 <a href="https://www.ea.com/es-es/games/fifa/fifa-21/volta/features">VOLTA FOOTBALL</a>
+                 . Planta cara a los más grandes del fútbol y a muchos más con los 
+                 <a href="https://www.ea.com/es-es/games/fifa/fifa-21/volta/groundbreakers">Rompemoldes</a> 
+                 de VOLTA. O pon a prueba tus habilidades con un sinfín de nuevos juegos de habilidad. ¡Hay un montón de cosas interesantes!</p>
+        </article>
+        <article>
+            <h2>2. Puedes crear la plantilla de tus sueños e incluso el estadio de tus sueños</h2>
+            <p>¿Alguna vez has querido juntar a Mbappé y Maradona? ¿O a Haaland y Henry? Con
+                <a href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features">FIFA Ultimate Team</a>
+                 podrás elegir entre miles de jugadores y crear el equipo de superestrellas de tus sueños, tanto pasadas como actuales. Además, ahora en FUT 21 puedes personalizar y convertir tu estadio en una auténtica caldera con nuevos tifos, cánticos asombrosos, imponentes trofeos y mucho más en tu 
+                 <a href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features/more-ways-to-progress">Estadio de FUT</a>.
+                </p>
+                <img height="500px" src="estadio-dormun.jpg" alt="estadio dormun">
         </article>
     </selection>
 </body>
