--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>21 RAZONES PARA JUGAR</h1>
@@ -28,7 +29,7 @@
         <article>
             <h2>2. Puedes crear la plantilla de tus sueños e incluso el estadio de tus sueños</h2>
             <p>¿Alguna vez has querido juntar a Mbappé y Maradona? ¿O a Haaland y Henry? Con
-                <a href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features">FIFA Ultimate Team</a>
+                <a id="FIFA" href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features">FIFA Ultimate Team</a>
                  podrás elegir entre miles de jugadores y crear el equipo de superestrellas de tus sueños, tanto pasadas como actuales. Además, ahora en FUT 21 puedes personalizar y convertir tu estadio en una auténtica caldera con nuevos tifos, cánticos asombrosos, imponentes trofeos y mucho más en tu 
                  <a href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features/more-ways-to-progress">Estadio de FUT</a>.
                 </p>
