index.html finished

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img class="arribaImg" src="foto de arriva para pagina.png" alt="pagina de pagina">
     <h1>21 RAZONES PARA JUGAR</h1>
     <section class="mainSection">
         <article>
@@ -33,10 +34,153 @@
                  podrás elegir entre miles de jugadores y crear el equipo de superestrellas de tus sueños, tanto pasadas como actuales. Además, ahora en FUT 21 puedes personalizar y convertir tu estadio en una auténtica caldera con nuevos tifos, cánticos asombrosos, imponentes trofeos y mucho más en tu 
                  <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features/more-ways-to-progress">Estadio de FUT</a>.
                 </p>
-                <img class="dormunImg" src="estadio-dormun.jpg" alt="estadio dormun">
+                <img class="TodasLasImg" src="estadio-dormun.jpg" alt="estadio dormun">
         </article>
         <article>
-
+          <h2>3. Forma un equipo con la comunidad de FUT</h2>
+          <p>
+            Compite o colabora con la comunidad en nuevos eventos de FUT donde formarás parte de un equipo y podrás desbloquear recompensas. Además, encuentra un compañero y enfréntate a la IA en Squad Battles, o a otras parejas o jugadores individuales en Division Rivals online, con el nuevo <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/features/more-ways-to-progress">modo cooperativo de FUT</a>.
+             Quizás no jueguen igual de bien que tú, pero recuerda que lo hacen lo mejor que pueden. 
+          </p>
+        </article>
+        <article>
+            <h2>4. Disfruta de contenido en vivo durante la temporada</h2>
+            <p>FUT presenta la conexión definitiva con el mundo real del fútbol gracias al contenido especial basado en lo que pasa en los campos. Lo que ocurre en el mundo real tiene un gran impacto en el juego: desde objetos especiales de la UEFA Champions League hasta mejoras importantes en el Equipo de la semana si los jugadores nos ofrecen momentazos durante el fin de semana.</p>
+            
+        </article>
+        <article>
+           <h2>5. Juega como el rey</h2>
+           <p>
+            De rey a ICONO. Eric Cantona se une a los 
+             <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/ultimate-team/icons">FUT 100</a>
+            , cien de los mejores futbolistas de todos los tiempos. Pero no estará solo. Dale la bienvenida a Xavi, Lahm, Eto'o, Torres y a muchos más, que se suman a Zidane, Pelé, Maradona, Ronaldinho y Cruyff en la lista de leyendas que puedes añadir a tu plantilla de FUT. 
+           </p>
+           <img class="TodasLasImg" src="cantona jugador.jpg" alt="jugador Cantona">
+        </article>
+        <article>
+            <h2>6. Dirige tu club de FUT estés donde estés
+            </h2>
+            <p>
+                Contrata jugadores estrella, personaliza tu estadio, comparte tu plantilla y mucho más. Controla tu club donde y cuando quieras descargando la De rey a ICONO. Eric Cantona se une a los 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/ultimate-team/fut-app">aplicacion complementaria de FUT</a> 
+                para iOS y Android, o también en tu dispositivo de escritorio con la De rey a ICONO. Eric Cantona se une a los 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/ultimate-team/fut-app">aplicacion web de FUT</a>.
+            </p>
+        </article>
+        <article>
+            <h2>7. Puedes volver a las calles y esta vez hacerlo online con amigos</h2>
+            <p>
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/ultimate-team/fut-app">VOLTA FOOTBALL</a>
+                 vuelve con su segunda temporada, ofreciéndote auténtico fútbol callejero en canchas y pistas de todo el mundo y con nuevos modos de juego. Los nuevos EQUIPOS DE VOLTA te permiten crear un equipo online con tus amigos y enfrentarte al mundo en partidos de 5 contra 5. ¡Hasta puedes jugar un Milan - Inter en las calles de Milán con los Partidos rápidos de VOLTA!
+            </p>
+            <img class="TodasLasImg" src="volta football.jpg" alt="VOLTA">
+        </article>
+        <article>
+            <h2>8. Desafía a las estrellas con los rompemoldes de VOLTA</h2>
+            <p>
+                Además de los EQUIPOS DE VOLTA y los Partidos rápidos de VOLTA, las BATALLAS DESTACADAS te permiten enfrentarte a algunas de las grandes personalidades de los diferentes mundos del fútbol, la música, la moda y mucho más, con la posibilidad de reclutarlos para tu equipo. No te pierdas las habilidades de Diplo con el balón, o dale un toque de realeza a tu equipo al enfrentarte en las calles con Eric Cantona. Los 
+                 <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/volta/groundbreakers">rompemoldes</a>
+                  han llegado a FIFA 21.
+            </p>
+            <img class="TodasLasImg" src="cancha.jpg" alt="cancha">
+        </article>
+        <article>
+            <h2>9. Seis nuevas ubicaciones</h2>
+            <p>
+                Juega en seis nuevas 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/volta/features#locations">ubicaciones</a> 
+                en VOLTA FOOTBALL: una cúpula geodésica de Dubái, el paseo marítimo de Sídney, un tejado en el centro de São Paulo, las calles de Milán o París, y el ESTADIO VOLTA. ¡Todos suman 23 increíbles terrenos de fútbol en los seis continentes!
+            </p>
+            <img class="TodasLasImg" src="cancha de volta.jpg" alt="cancha de volta">
+        </article>
+        <article>
+            <h2>10. Más personalización</h2>
+            <p>
+                La 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/volta/collections">personalización</a>
+                 es clave en VOLTA FOOTBALL y FIFA 21 apuesta por un amplio abanico de ropa de adidas, de clubes de fútbol profesionales, de equipos de fútbol callejero y de colecciones diseñadas por famosos, que podrás desbloquear y vestir. O también puedes llevar algo un poco más extravagante…
+            </p>
+        </article>
+        <article>
+            <h2>11. Disfruta de un realismo inigualable</h2>
+            <p>
+                Con 17 000 jugadores y más de 700 equipos, 90 estadios con licencia y más de 30 ligas, FIFA 21 te ofrece un 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/leagues-and-clubs-authenticity">realismo inigualable</a> 
+                con acceso exclusivo a algunas de las competiciones más importantes del mundo. Saborea lo que se siente al levantar la UEFA Champions League, la UEFA Europa League, la CONMEBOL Libertadores, la Premier League, la Bundesliga y muchas más, solo en FIFA 21.
+            </p>
+            <img class="TodasLasImg" src="mbappe.jpg" alt="Mbappé">
+        </article>
+        <article>
+            <h2>12. La jugabilidad más inteligente en la historia de FIFA</h2>
+            <p>
+                Las <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/features/gameplay">nuevas características de juego</a> de FIFA 21 te recompensan por tu creatividad y control. Toma el control del plan de juego de tu equipo con los Desmarques creativos, supera a los defensas con Regates ágiles y disfruta de las mejoras del juego en todo el campo.
+            </p>
+            <<img class="TodasLasImg" src="mbappe" alt="rating">
+        </article>
+        <article>
+            <h2>13. La gestión de tu equipo, aún más detallada</h2>
+            <p>
+                Tanto si estás a cargo del Real Madrid o del Real Salt Lake, el Independiente Medellín o el Inter de Milán, el 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/features/career-mode">Modo carrera</a>
+                 de FIFA 21 te permite experimentar lo que se siente al gestionar el camino hacia la gloria de tu equipo con las funciones más detalladas hasta la fecha.
+            </p>
+            
+        </article>
+        <article>
+            <h2>14. Nueva profundidad en los partidos</h2>
+            <p>Un nuevo 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/features/career-mode#interactive-match-sim">Simulador de partidos interactivo</a>
+                 te permite jugar la temporada de una manera inédita. Intervén cuando quieras en los partidos para cambiar el resultado y controlar momentos importantes como penaltis o faltas, y haz cambios directamente desde el simulador mientras analizas los niveles de rendimiento de tus jugadores y las estadísticas del encuentro.</p>
+        </article>
+        <article>
+            <h2>15. El entrenamiento</h2>
+            <p>
+                Prueba a colocar a Alexander-Arnold como mediocentro o mueve a Jõao Félix a la banda con las nuevas conversiones de posición, que te permitirán subsanar las carencias de tu equipo y configurar 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/features/career-mode#player-development">planes de desarrollo</a>
+                 para que tus jugadores progresen y se adapten a tu estilo de juego. Además, ten más control del entrenamiento con un nuevo 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/features/career-mode#match-sharpness">planificador</a> 
+                que te permite elegir cuándo se entrena y cuándo se descansa para equilibrar la soltura y la frescura, y asegurarte de que estás rindiendo al cien por cien.
+            </p>
+            <img class="TodasLasImg" src="rating.jpg" alt="rating">
+        </article>
+        <article>
+            <h2>16. Traspasos</h2>
+            <p>
+                Tanto si quieres fichar a Mbappé como al próximo Mbappé, 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/features/career-mode#new-transfer-options">realismo mejorado de los traspasos</a>
+                 te proporciona formas inéditas de fichar jugadores gracias a las nuevas cesiones con opción de compra, que te permitirán probar a los jugadores antes de comprometerte a añadirlos a tu plantilla de forma permanente. Y, si lo prefieres, incluso puedes aumentar el presupuesto con un espaldarazo financiero de hasta 500 millones extra que te ayudarán a fichar a alguna que otra superestrella.
+            </p>
+        </article>
+        <article>
+            <h2>17. Celebra tus mejores momentos con más clase</h2>
+            <p>
+                Los goles se tienen que celebrar. FIFA 21 te permite saltar, bailar, hacerte un selfie y posar con estilo con las nuevas celebraciones, como la postura del loto de Erling Haaland, el bebé llorón de Kylian Mbappé, ¡y muchas más! Échales un vistazo a todas 
+                <a class="purpleLink" href="https://www.ea.com/es-es/games/fifa/fifa-21/media-hub?" >aqui</a>.
+            </p>
+        </article>
+        <article>
+            <h2>18. Habilidad, con más fanfarronería</h2>
+            <p>
+                Arrastre de balón con amago de giro. Autopase. Túnel dirigido. Pisada al tacón. Finta hacia delante y giro. Cinco nuevas filigranas para que las domines y las emplees en tu juego mientras te abres camino entre los rivales en FIFA 21.
+            </p>
+        </article>
+        <article>
+               <h2>19. Obtén contenido adicional durante toda la temporada con EA Play</h2>
+        </article>
+        <article>
+            <h2>20. La doble versión te permite conservar tus progresos en FIFA Ultimate Team y VOLTA FOOTBALL cuando te compres una consola de nueva generación.</h2>
+            <p>Compra FIFA 21 para PlayStation®4 o Xbox One antes del lanzamiento de FIFA 22 y consigue la versión de tu juego para la consola equivalente de nueva generación (PlayStation®5 o Xbox Series X|S) gratis†. ¡Podrás seguir jugando a VOLTA FOOTBALL y FIFA Ultimate Team tal y como los dejaste!
+            </p>
+        </article>
+        <article>
+            <p>  encontrarás más información sobre la doble versión
+                <a class="purpleLink" href="https://www.ea.com/es-es/dual-entitlement" >aqui</a>.</p>
+        </article>
+        <article>
+            <h2>21. Y... ¿quién sabe? Puede que te topes con alguno de estos...</h2>
+            <p>Las estrellas también juegan. ¡
+                <a class="purpleLink" href="https://www.ea.com/es-es/dual-entitlement" >Únete ya a ellos</a>
+                !</p>
         </article>
     </section>
 </body>
